--- a/index.html
+++ b/index.html
@@ -11,28 +11,32 @@
 <body>
 
 
- <div id="div_mother" class="container">
+   
 
-
-
-
-    </div> 
-
-<div id="div_mode" class="">
-    <div>
-        <button id="easy">Easy</button>
-        <button id="Medium">Medium</button>
-        <button id="hard">Hard</button> 
+    <div id="div_mode" class="lolo">
+        <div>
+            <button id="easy">Easy</button>
+            <button id="medium">Medium</button>
+            <button id="hard">Hard</button>
+        </div>
+        <input type="text" placeholder="Pseudo">
+        <button id="addPlayer">Start Game</button>
     </div>
-    <input type="text" placeholder="Pseudo">
-    <button id="addPlayer">Start Game</button>
-</div>
+    <div id="div_mother" class="container">
+
+
+
+
+    </div>
+    <div id="score">
+        
+    </div>
 
     <script src="./public/js/app.js"></script>
 </body>
 
 </html>
- <!--   <div class="flip-card">
+<!--   <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
                 <img src="./public/img/images1.jpg" alt="said">
